--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,6 @@ kotlin.mpp.enableCInteropCommonization=true
 #Android
 android.useAndroidX=true
 android.nonTransitiveRClass=true
+
+sonatypeUsername=${env.SONATYPE_USERNAME}
+sonatypePassword=${env.SONATYPE_PASSWORD}
