added gradle publish property

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,8 +68,11 @@ jobs:
         arguments: |
           ${{ matrix.target }}
           closeSonatypeStagingRepository
+          -Psigning.gnupg.executable=gpg
+          -Psigning.gnupg.useLegacyGpg=true
           -Psigning.gnupg.passphrase='${{secrets.OSSRH_GPG_SECRET_KEY_PASSWORD}}'
           -Psigning.gnupg.keyName='${{secrets.OSSRH_GPG_SECRET_KEY_ID}}'
           -PsonatypeUsername='${{secrets.OSSRH_USERNAME}}'
           -PsonatypePassword='${{secrets.OSSRH_PASSWORD}}'
+  
     
