--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ kotlin.code.style=official
 kotlin.js.compiler=ir
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
+kotlin.mpp.androidSourceSetLayoutV2AndroidStyleDirs.nowarn=true
 #Android
 android.useAndroidX=true
 android.nonTransitiveRClass=true
