--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,8 +8,10 @@ android-compileSdk = "33"
 apache-commons = "3.12.0"
 compose = "1.6.2"
 compose-plugin = "1.6.0"
+compose-compiler = "1.5.5"
 ktor = "2.3.9"
 logback-classic = "1.5.3"
+uiTooling = "1.6.3"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
