--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #Gradle
-org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.jvmargs=-Xmx8192M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048"
 org.gradle.caching=true
 org.gradle.configuration-cache=false
 #Kotlin
@@ -8,6 +8,7 @@ kotlin.js.compiler=ir
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.androidSourceSetLayoutV2AndroidStyleDirs.nowarn=true
+kotlin.daemon.jvmargs=-Xmx2048m
 #Android
 android.useAndroidX=true
 android.nonTransitiveRClass=true
