--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,43 @@
 [versions]
+accompanistSwiperefresh = "0.25.1"
 agp = "8.0.2"
+coilCompose = "2.3.0"
 kotlin = "1.9.0"
 kotlinxCoroutinesCore = "1.8.0"
 nexus-publish = "2.0.0-rc-1"
-android-minSdk = "24"
+android-minSdk = "27"
 android-compileSdk = "33"
+androidx-activityCompose = "1.8.2"
+androidx-support = "28.0.0"
+androidx-appcompat = "1.6.1"
+androidx-constraintlayout = "2.1.4"
+androidx-core-ktx = "1.12.0"
+androidx-espresso-core = "3.5.1"
+android-lifecycleService = "2.7.0"
+androidx-material = "1.11.0"
+androidx-test-junit = "1.1.5"
 apache-commons = "3.12.0"
 compose = "1.6.2"
 compose-plugin = "1.6.0"
 compose-compiler = "1.5.5"
 ktor = "2.3.9"
 logback-classic = "1.5.3"
+timber = "5.0.1"
 uiTooling = "1.6.3"
 
 [libraries]
+accompanist-placeholder-material = { module = "com.google.accompanist:accompanist-placeholder-material", version.ref = "accompanistSwiperefresh" }
+accompanist-swiperefresh = { module = "com.google.accompanist:accompanist-swiperefresh", version.ref = "accompanistSwiperefresh" }
+androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core-ktx" }
+androidx-lifecycle-service = { module = "androidx.lifecycle:lifecycle-service", version.ref = "android-lifecycleService" }
+androidx-test-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-junit" }
+androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidx-espresso-core" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidx-appcompat" }
+androidx-material = { group = "com.google.android.material", name = "material", version.ref = "androidx-material" }
+androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "androidx-constraintlayout" }
+android-support = { module = "com.android.support:support-v4", version.ref = "androidx-support" }
+android-support-appcompat = { module = "com.android.support:appcompat-v7", version.ref = "androidx-support" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesCore" }
 nexus-publish = { module = "io.github.gradle-nexus.publish-plugin:io.github.gradle-nexus.publish-plugin.gradle.plugin", version.ref = "nexus-publish" }
@@ -21,6 +45,7 @@ compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = 
 compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 logback-classic = { module = "ch.qos.logback:logback-classic",  version.ref = "logback-classic"}
 apache-commons = { module = "org.apache.commons:commons-lang3",  version.ref = "apache-commons"}
+timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 
 [plugins]
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
