--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ kotlinxCoroutinesCore = "1.8.0"
 nexus-publish = "2.0.0-rc-1"
 android-minSdk = "27"
 android-compileSdk = "34"
+android-targetSdk = "34"
 androidx-activityCompose = "1.8.2"
 androidx-support = "28.0.0"
 androidx-appcompat = "1.6.1"
@@ -24,6 +25,7 @@ ktor = "2.3.9"
 logback-classic = "1.5.3"
 timber = "5.0.1"
 uiTooling = "1.6.3"
+jetbrainsKotlinJvm = "1.8.10"
 
 [libraries]
 accompanist-placeholder-material = { module = "com.google.accompanist:accompanist-placeholder-material", version.ref = "accompanistSwiperefresh" }
@@ -32,6 +34,7 @@ androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = 
 androidx-lifecycle-service = { module = "androidx.lifecycle:lifecycle-service", version.ref = "android-lifecycleService" }
 androidx-test-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-junit" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidx-espresso-core" }
+androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidx-appcompat" }
 androidx-material = { group = "com.google.android.material", name = "material", version.ref = "androidx-material" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "androidx-constraintlayout" }
@@ -52,3 +55,5 @@ androidLibrary = { id = "com.android.library", version.ref = "agp" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-plugin" }
 ktor = { id = "io.ktor.plugin", version.ref = "ktor" }
+jetbrainsKotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
+androidApplication = { id = "com.android.application", version.ref = "agp" }
